[package]
authors = ["n01e0 <reoshiseki@gmail.com>"]
description = "\n t         t           .Gt\n ED.       Ej         j#W:\n E#K:      E#,      ;K#f\n E##W;     E#t    .G#D.\n E#E##t    E#t   j#K;\n E#ti##f   E#t ,K#f   ,GD;\n E#t ;##D. E#t  j#Wi   E#t\n E#ELLE##K:E#t   .G#D: E#t\n E#L;;;;;;,E#t     ,K#fK#t\n E#t       E#t       j###t\n E#t       E#t        .G#t\n           ,;.          ;;\n\nPIG\nProcess Injection Gear\n"
edition = "2018"
name = "pig"
version = "0.1.0"
[dependencies]
libc = "0.2.82"
nix = "0.19.1"
procfs = "0.9.1"
caps = "0.5.0"
bytes = "1.0.1"

[dependencies.clap]
features = ["yaml"]
version = "2.33.3"
